Support for browserify, fixed a bug with Compass removing gulp-compass and adding gulp-ruby-sass

--- a/app/sass/modules/_colors.scss
+++ b/app/sass/modules/_colors.scss
@@ -1,5 +1,5 @@
 /* ==========  Colors  ========== */
-
+$colorText:#000;
 $colorBlack: #000;
 $colorGrayDark: rgba($colorBlack, .87);
 $colorGray: rgba($colorBlack, .54);
