--- a/app/sass/modules/_utils.scss
+++ b/app/sass/modules/_utils.scss
@@ -22,8 +22,8 @@
   $wideGutterWidth: 3.7% !default;
 
   // Defining font family
-  $fontDefault: 'Lato', Helvetica, Arial, sans-serif !default;
-  $fontHighlight: 'Lato', Helvetica, sans-serif !default;
+  $fontDefault: Helvetica, Arial, sans-serif !default;
+  $fontHighlight: Helvetica, sans-serif !default;
   //$fontIcon: 'icons' !default;
 
   // Defining font sizes
