--- a/app/sass/modules/_utils.scss
+++ b/app/sass/modules/_utils.scss
@@ -6,309 +6,90 @@
 
 /*==========  VARIABLES  ==========*/
 
-  // Defining breakpoints
-  $medium: 620px !default;
-  $wide: 800px !default;
-  $huge: 1600px !default;
-  $mediumContainer: 688px !default;
-  $wideContainer: 864px !default;
-
-  // Defining grid sizes
-  $mediumColCount: 3 !default;
-  $mediumColWidth: 30.3% !default;
-  $mediumGutterWidth: 4.5% !default;
-  $wideColCount: 4 !default;
-  $wideColWidth: 22.2% !default;
-  $wideGutterWidth: 3.7% !default;
-
   // Defining font family
   $fontDefault: Helvetica, Arial, sans-serif !default;
   $fontHighlight: Helvetica, sans-serif !default;
   //$fontIcon: 'icons' !default;
 
-  // Defining font sizes
-  $fontSmall: 13px !default;
-  $fontBase: 16px  !default;
-  $fontMedium: 20px !default;
-  $fontLarge: 26px !default;
-  $fontXLarge: 42px !default;
-  $fontXXLarge: 68px !default;
-  $fontHuge: 110px !default;
 
   // Defining animation easings
   $animationEasing: cubic-bezier(0.455, 0.030, 0.515, 0.955) !default;
 
+/* ==========  Colors  ========== */
+  $colorText:#000;
+  $colorBlack: #000;
+  $colorGrayDark: rgba($colorBlack, .87);
+  $colorGray: rgba($colorBlack, .54);
+  $colorGrayLight: rgba($colorBlack, .26);
+  $colorGrayLighter: rgba($colorBlack, .12);
 
 /*==========  MIXINS  ==========*/
 
-  @mixin media-query($media-query) {
-    @if $media-query == small {
-      @media only screen and (max-width: $medium - 1) { @content; }
+
+@mixin transition ($prop: all, $time: 1s, $ease: linear) {
+  -webkit-transition: $prop $time $ease;
+  -moz-transition: $prop $time $ease;
+  -o-transition: $prop $time $ease;
+  -ms-transition: $prop $time $ease;
+  transition: $prop $time $ease;
+}
+@mixin transition-transform($time:1s, $ease:linear){
+  -webkit-transition: -webkit-transform $time $ease; 
+  -moz-transition: -moz-transform $time $ease;
+  -o-transition: -o-transform $time $ease;
+  transition: transform $time $ease;
+}
+@mixin rotate($deg){
+  transform: rotate($deg);
+  -ms-transform: rotate($deg); /* IE 9 */
+  -webkit-transform: rotate($deg); /* Safari and Chrome */
+}
+
+@mixin scale($scaleX, $scaleY){
+  transform: scale($scaleX, $scaleY);
+  -ms-transform: scale($scaleX, $scaleY); /* IE 9 */
+  -webkit-transform: scale($scaleX, $scaleY); /* Safari and Chrome */
+}
+@mixin translate($x, $y){
+  transform: translate($x, $y);
+  -ms-transform: translate($x, $y); /* IE 9 */
+  -webkit-transform: translate($x, $y); /* Safari and Chrome */
+}
+@mixin transform ($rotate: 90deg, $scale: 1, $skew: 1deg, $translateX:0, $translateY: 0) {
+  -webkit-transform: rotate($rotate) scale($scale) skew($skew) translate($translateX, $translateY);
+  -moz-transform: rotate($rotate) scale($scale) skew($skew) translate($translateX, $translateY);
+  -o-transform: rotate($rotate) scale($scale) skew($skew) translate($translateX, $translateY);
+  -ms-transform: rotate($rotate) scale($scale) skew($skew) translate($translateX, $translateY);
+  transform: rotate($rotate) scale($scale) skew($skew) translate($translateX, $translateY);
+}
+
+@mixin border-radius ($radius:5px) {
+  -webkit-border-radius: $radius;
+  -moz-border-radius: $radius;
+  border-radius: $radius;
+}
+@mixin keyframes($animationName) {
+    @-webkit-keyframes #{$animationName} {
+        @content;
     }
-
-    @if $media-query == medium {
-      @media only screen and (min-width: $medium) { @content; }
+    @-moz-keyframes #{$animationName} {
+        @content;
     }
-
-    @if $media-query == medium-only {
-      @media only screen and (min-width: $medium) and (max-width: $wide - 1) { @content; }
+    @-o-keyframes #{$animationName} {
+        @content;
     }
-
-    @if $media-query == wide {
-      @media only screen and (min-width: $wide) { @content; }
+    @keyframes #{$animationName} {
+        @content;
     }
+}
+@mixin animation($str) {
+  -webkit-animation: #{$str};
+  -moz-animation: #{$str};
+  -ms-animation: #{$str};
+  -o-animation: #{$str};
+  animation: #{$str};      
+}
 
-    @if $media-query == huge {
-      @media only screen and (min-width: $huge) { @content; }
-    }
-  }
-
- 
-  @mixin small-only { @include media-query(small) { @content }; }
-  @mixin medium { @include media-query(medium) { @content }; }
-  @mixin medium-only { @include media-query(medium-only) { @content }; }
-  @mixin wide { @include media-query(wide) { @content }; }
-  @mixin huge { @include media-query(huge) { @content }; }
-
- 
-  @mixin rule--small {
-    font-size: $fontSmall;
-    line-height: 2.0000em; /* 26px */
-    padding-top: 2.0000em;
-    padding-bottom: 0;
-  }
-
-  @mixin rule--base {
-    font-size: $fontBase;
-    line-height: 1.6250em; /* 26px */
-    padding-top: 1.6250em;
-    padding-bottom: 0;
-  }
-
-  @mixin rule--medium {
-    font-size: $fontMedium;
-    font-weight: 300;
-    line-height: 1.3000em; /* 26px */
-    padding-top: 1.3000em;
-    padding-bottom: 0;
-  }
-
-  @mixin rule--large {
-    font-family: $fontHighlight;
-    font-size: $fontLarge;
-    font-weight: 300;
-    line-height: 1.0000em; /* 26px */
-    padding-top: 1.0000em;
-    padding-bottom: 0;
-  }
-
-  @mixin rule--xlarge {
-    font-family: $fontHighlight;
-    font-size: $fontXLarge;
-    font-weight: 300;
-    line-height: 1.2381em; /* 52px */
-    padding-top: 0.6190em;
-    padding-bottom: 0;
-  }
-
-  @mixin rule--xxlarge {
-    font-family: $fontHighlight;
-    font-size: $fontXXLarge;
-    font-weight: 300;
-    line-height: 1.1471em; /* 78px */
-    padding-top: 0.3824em;
-    padding-bottom: 0;
-  }
-
-  @mixin rule--huge {
-    font-family: $fontHighlight;
-    font-size: $fontHuge;
-    font-weight: 300;
-    line-height: 1.19em; /* 130px */
-    padding-top: 0.2364em;
-    padding-bottom: 0;
-  }
+/*==========  FONTS  ==========*/
 
 
-
-  // Mixins to determine which rule to use at which breakpoint
-  @mixin type--small($isFromMixin: false) {
-    @include rule--small;
-  }
-
-  @mixin type--base($isFromMixin: false) {
-    @include rule--base;
-  }
-
-  @mixin type--medium($isFromMixin: false) {
-    @if $isFromMixin == false {
-      @include type--base(true);
-      @include wide {
-        @include rule--medium;
-      }
-    }
-    @else {
-      @include rule--medium;
-    }
-  }
-
-  @mixin type--large($isFromMixin: false) {
-    @if $isFromMixin == false {
-      @include type--medium(true);
-      @include wide {
-        @include rule--large;
-      }
-    }
-    @else {
-      @include rule--large;
-    }
-  }
-
-  @mixin type--xlarge($isFromMixin: false) {
-    @if $isFromMixin == false {
-      @include type--large(true);
-      @include wide {
-        @include rule--xlarge;
-      }
-    }
-    @else {
-      @include rule--xlarge;
-    }
-  }
-
-  @mixin type--xxlarge($isFromMixin: false) {
-    @if $isFromMixin == false {
-      @include type--xlarge(true);
-      @include wide {
-        @include rule--xxlarge;
-      }
-    }
-    @else {
-      @include rule--xxlarge;
-    }
-  }
-
-  @mixin type--huge($isFromMixin: false) {
-    @if $isFromMixin == false {
-      @include type--xxlarge(true);
-      @include wide {
-        @include rule--huge;
-      }
-    }
-    @else {
-      @include rule--huge;
-    }
-  }
-
-
-  // LISTS
-  @mixin bullet-type($bullet, $icon: false) {
-    &::before {
-      @if $icon {
-        font-family: $fontIcon;
-        @extend .#{$icon}::before;
-        font-size: $fontSmall;
-      }
-      @else {
-        content: $bullet;
-        font-family: $fontHighlight;
-      }
-
-      display: block;
-      font-weight: 400;
-      position: absolute;
-      top: 0;
-      left: 0;
-      line-height: $lineHeight;
-
-    }
-  }
-
-  @mixin numbered-list() {
-    &::before {
-      counter-increment: list;
-      content: '0' counter(list);
-      color: inherit;
-      font-weight: 400;
-      display: inline-block;
-      position: absolute;
-      left: 0;
-    }
-  }
-
-  // Mixin to create links
-  @mixin style-cta($textColor, $linkIcon: false) {
-    font-family: $fontHighlight;
-    color: $textColor;
-    font-weight: 400;
-    display: inline-block;
-    line-height: 1;
-
-    &:hover {
-      color: $colorGrayDark;
-    }
-
-    @if $linkIcon {
-      text-decoration: none;
-      &::before {
-        display: inline-block;
-        padding-right: 10px;
-        font-family: $fontIcon;
-        line-height: ($lineHeight) - 1; // remove 1px from line-height to fix baseline alignment
-        font-size: $fontSmall;
-        content: $linkIcon;
-      }
-    }
-  }
-
-  // Mixin to create highlight modules
-  @mixin highlight-symbol($verticalOffset: 0, $horizontalOffset: 45px, $fontSize: 130px) {
-    position: relative;
-
-    &::before {
-      display: none;
-
-      @include medium {
-        display: block;
-        position: absolute;
-        top: 106px;
-        right: $horizontalOffset;
-
-        font-family: $fontIcon;
-        font-size: $fontSize;
-        line-height: 1px;
-        text-align: center;
-        height: 100%;
-        width: $mediumColWidth;
-        color: #ffffff;
-      }
-
-      .highlight-module--left & {
-        right: auto;
-        left: $horizontalOffset;
-      }
-
-      @include wide {
-        top: 134px;
-        width: $wideColWidth;
-        font-size: $fontSize + 50;
-
-        .highlight-module--large & {
-          font-size: $fontSize + 300;
-        }
-      }
-    }
-  }
-
-  // Grid CSS rules
-  @mixin rule--col($mediaQuery) {
-    @if $mediaQuery == medium {
-      float: left;
-      margin-right: $mediumGutterWidth;
-    }
-
-    @if $mediaQuery == wide {
-      float: left;
-      margin-right: $wideGutterWidth;
-    }
-  }
